--- a/_posts/2018-08-12-View动画源码解析.md
+++ b/_posts/2018-08-12-View动画源码解析.md
@@ -70,7 +70,7 @@ protected void invalidateParentCaches() {
 
     void invalidateInternal(int l, int t, int r, int b, boolean invalidateCache,
             boolean fullInvalidate) {
-            //...
+            // ...
             // Propagate the damage rectangle to the parent view.
             final AttachInfo ai = mAttachInfo;
             final ViewParent p = mParent;
@@ -81,70 +81,18 @@ protected void invalidateParentCaches() {
                 p.invalidateChild(this, damage);
             }
 
-            //...
+            // ...
 ```
 可以看出它调用了 ViewGroup 的 invalidateChild()方法：
 ```java
     public final void invalidateChild(View child, final Rect dirty) {
-        final AttachInfo attachInfo = mAttachInfo;
-        if (attachInfo != null && attachInfo.mHardwareAccelerated) {
-            // HW accelerated fast path
-            onDescendantInvalidated(child, child);
-            return;
-        }
-
+        // ...
         ViewParent parent = this;
         if (attachInfo != null) {
-            // If the child is drawing an animation, we want to copy this flag onto
-            // ourselves and the parent to make sure the invalidate request goes
-            // through
+            // 如果子 View 要绘制动画，则要将该标志位复制给自己和自己的 parent 以确保刷新请求能通过
             final boolean drawAnimation = (child.mPrivateFlags & PFLAG_DRAW_ANIMATION) != 0;
 
-            // Check whether the child that requests the invalidate is fully opaque
-            // Views being animated or transformed are not considered opaque because we may
-            // be invalidating their old position and need the parent to paint behind them.
-            Matrix childMatrix = child.getMatrix();
-            final boolean isOpaque = child.isOpaque() && !drawAnimation &&
-                    child.getAnimation() == null && childMatrix.isIdentity();
-            // Mark the child as dirty, using the appropriate flag
-            // Make sure we do not set both flags at the same time
-            int opaqueFlag = isOpaque ? PFLAG_DIRTY_OPAQUE : PFLAG_DIRTY;
-
-            if (child.mLayerType != LAYER_TYPE_NONE) {
-                mPrivateFlags |= PFLAG_INVALIDATED;
-                mPrivateFlags &= ~PFLAG_DRAWING_CACHE_VALID;
-            }
-
-            final int[] location = attachInfo.mInvalidateChildLocation;
-            location[CHILD_LEFT_INDEX] = child.mLeft;
-            location[CHILD_TOP_INDEX] = child.mTop;
-            if (!childMatrix.isIdentity() ||
-                    (mGroupFlags & ViewGroup.FLAG_SUPPORT_STATIC_TRANSFORMATIONS) != 0) {
-                RectF boundingRect = attachInfo.mTmpTransformRect;
-                boundingRect.set(dirty);
-                Matrix transformMatrix;
-                if ((mGroupFlags & ViewGroup.FLAG_SUPPORT_STATIC_TRANSFORMATIONS) != 0) {
-                    Transformation t = attachInfo.mTmpTransformation;
-                    boolean transformed = getChildStaticTransformation(child, t);
-                    if (transformed) {
-                        transformMatrix = attachInfo.mTmpMatrix;
-                        transformMatrix.set(t.getMatrix());
-                        if (!childMatrix.isIdentity()) {
-                            transformMatrix.preConcat(childMatrix);
-                        }
-                    } else {
-                        transformMatrix = childMatrix;
-                    }
-                } else {
-                    transformMatrix = childMatrix;
-                }
-                transformMatrix.mapRect(boundingRect);
-                dirty.set((int) Math.floor(boundingRect.left),
-                        (int) Math.floor(boundingRect.top),
-                        (int) Math.ceil(boundingRect.right),
-                        (int) Math.ceil(boundingRect.bottom));
-            }
-
+            // ...
             do {
                 View view = null;
                 if (parent instanceof View) {
@@ -159,18 +107,9 @@ protected void invalidateParentCaches() {
                     }
                 }
 
-                // If the parent is dirty opaque or not dirty, mark it dirty with the opaque
-                // flag coming from the child that initiated the invalidate
-                if (view != null) {
-                    if ((view.mViewFlags & FADING_EDGE_MASK) != 0 &&
-                            view.getSolidColor() == 0) {
-                        opaqueFlag = PFLAG_DIRTY;
-                    }
-                    if ((view.mPrivateFlags & PFLAG_DIRTY_MASK) != PFLAG_DIRTY) {
-                        view.mPrivateFlags = (view.mPrivateFlags & ~PFLAG_DIRTY_MASK) | opaqueFlag;
-                    }
-                }
+                // ...
 
+                // 循环调用该方法，直到 parent 为 null。循环开始时，parent 为自身。
                 parent = parent.invalidateChildInParent(location, dirty);
                 if (view != null) {
                     // Account for transform on current parent
@@ -189,10 +128,384 @@ protected void invalidateParentCaches() {
         }
     }
 ```
+可以看出它也是在设置一些参数，里面循环调用 invalidateChildInParent。我们进去看看：
+```java
+    /**
+     * This implementation returns null if this ViewGroup does not have a parent,
+     * if this ViewGroup is already fully invalidated or if the dirty rectangle
+     * does not intersect with this ViewGroup's bounds.
+     */
+    public ViewParent invalidateChildInParent(final int[] location, final Rect dirty) {
+        if ((mPrivateFlags & (PFLAG_DRAWN | PFLAG_DRAWING_CACHE_VALID)) != 0) {
+            // either DRAWN, or DRAWING_CACHE_VALID
+            if ((mGroupFlags & (FLAG_OPTIMIZE_INVALIDATE | FLAG_ANIMATION_DONE))
+                    != FLAG_OPTIMIZE_INVALIDATE) {
+                dirty.offset(location[CHILD_LEFT_INDEX] - mScrollX,
+                        location[CHILD_TOP_INDEX] - mScrollY);
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == 0) {
+                    dirty.union(0, 0, mRight - mLeft, mBottom - mTop);
+                }
 
+                final int left = mLeft;
+                final int top = mTop;
 
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == FLAG_CLIP_CHILDREN) {
+                    if (!dirty.intersect(0, 0, mRight - left, mBottom - top)) {
+                        dirty.setEmpty();
+                    }
+                }
 
+                location[CHILD_LEFT_INDEX] = left;
+                location[CHILD_TOP_INDEX] = top;
+            } else {
 
-## 参考文献
-+ [android 动画系列 (2) - interpolator 插值器](https://www.jianshu.com/p/88740cba25e6)   
-+ [模拟自然动画的精髓——TimeInterpolator与TypeEvaluator](https://www.jianshu.com/p/b239d14060a8) 
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == FLAG_CLIP_CHILDREN) {
+                    dirty.set(0, 0, mRight - mLeft, mBottom - mTop);
+                } else {
+                    // in case the dirty rect extends outside the bounds of this container
+                    dirty.union(0, 0, mRight - mLeft, mBottom - mTop);
+                }
+                location[CHILD_LEFT_INDEX] = mLeft;
+                location[CHILD_TOP_INDEX] = mTop;
+
+                mPrivateFlags &= ~PFLAG_DRAWN;
+            }
+            mPrivateFlags &= ~PFLAG_DRAWING_CACHE_VALID;
+            if (mLayerType != LAYER_TYPE_NONE) {
+                mPrivateFlags |= PFLAG_INVALIDATED;
+            }
+
+            return mParent;
+        }
+
+        return null;
+    }
+```
+从注解可以看出来，这个函数是返回当前 ViewGroup 的 parent 的。里面还没有看到具体的动画逻辑，由于 invalidateChildInParent 会一直循环执行，一直到 parent 为 null 为止，而 ViewGroup 的 parent 也是 ViewGroup，那么无论循环多少次都是调用一样的方法，都没有跟具体的动画逻辑有关系，那么动画到底是在哪里触发的呢？    
+我们知道，我们的布局是通过 setContentView() 时添加到 DecorView 中的，那么 DecorView 就是 View 树的根布局，而 DecorView 其实是会在 WindowManagerGlobal 的 addView 方法被添加到 ViewRootImpl 中，这个才是真正的根布局（虽然并没有继承 ViewGroup)。我们来看下 ViewRootImpl 的 invalidateChildInParent 方法：
+```java
+    public ViewParent invalidateChildInParent(int[] location, Rect dirty) {
+        // ...
+        if (dirty == null) {
+            invalidate();
+            return null;
+        } else if (dirty.isEmpty() && !mIsAnimating) {
+            return null;
+        }
+        // ...
+        invalidateRectOnScreen(dirty);
+
+        return null;
+    }
+```
+从 ViewGroup 的 invalidateChildInParent 方法里看出来 dirty 是不为空的，那么会直接走到 invalidateRectOnScreen 方法中：
+```java
+    private void invalidateRectOnScreen(Rect dirty) {
+        // ...
+        if (!mWillDrawSoon && (intersected || mIsAnimating)) {
+            scheduleTraversals();
+        }
+    }
+
+    void scheduleTraversals() {
+        if (!mTraversalScheduled) {
+            // ...
+            mChoreographer.postCallback(
+                    Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);
+            // ...
+        }
+    }
+
+    final TraversalRunnable mTraversalRunnable = new TraversalRunnable();
+    final class TraversalRunnable implements Runnable {
+        @Override
+        public void run() {
+            doTraversal();
+        }
+    }
+
+    void doTraversal() {
+        if (mTraversalScheduled) {
+            // ...
+            performTraversals();
+            // ...
+        }
+    }
+``` 
+可以看出它的目的是将 performTraversals() 方法封装到 Runnalbe 里，然后传给 Choreographer。我们来看下传给它后做了什么：
+```java
+    /**
+     * Posts a callback to run on the next frame.
+     * <p>
+     * The callback runs once then is automatically removed.
+     * </p>
+     *
+     * @param callbackType The callback type.
+     * @param action The callback action to run during the next frame.
+     * @param token The callback token, or null if none.
+     *
+     * @see #removeCallbacks
+     * @hide
+     */
+    public void postCallback(int callbackType, Runnable action, Object token) {
+        postCallbackDelayed(callbackType, action, token, 0);
+    }
+```
+从注释可以看出，这个将 Runnable 传进来是为了在屏幕绘制下一帧的时候去执行。也就是我们调用 start 启动动画后并不是直接执行的，而是在屏幕绘制下一帧的时候才会执行。这个方法最终会调用到：
+```java
+    private void postCallbackDelayedInternal(int callbackType,
+            Object action, Object token, long delayMillis) {
+        synchronized (mLock) {
+            final long now = SystemClock.uptimeMillis();
+            final long dueTime = now + delayMillis;
+            
+            // 会将 Runnable 封装到 CallbackRecord 中，然后存入队列中
+            mCallbackQueues[callbackType].addCallbackLocked(dueTime, action, token);
+
+            if (dueTime <= now) {
+                scheduleFrameLocked(now);
+            } else {
+                Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);
+                msg.arg1 = callbackType;
+                msg.setAsynchronous(true);
+                mHandler.sendMessageAtTime(msg, dueTime);
+            }
+        }
+    }
+```
+Runnable 被存入到 Choreographer 的待执行队列中，当屏幕绘制信号（安卓手机屏幕刷新频率为60fps，也就是16.7ms屏幕会刷新一次）到来时会被执行，这样 ViewRootImpl 的 performTranversals() 就会执行。这个方法是从 DecorView 开始遍历 View 树来执行 onMeasure 等操作的。由于每一次页面刷新都会执行 ViewRootImpl 的 performTraversal() 操作来遍历 View 树，找到发生改变的 View 来执行 onMeasure 等操作，所以我们写布局时要尽量减少层级。
+
+**我们来总结下调用 startAnimation 后的流程：**
+![]({{site.url}}/img/android/anim/startAnimation1.png)   
+1. 调用 View.StartAnimation(Animation) 方法后，会调用 setAnimation() 将这个 animation 会作为 View 的全局变量保存起来
+2. 然后调用 View 的 invalidate() 方法，它会调用 parent.invalidateChild() 方法来调到 ViewGroup 中的该方法。
+3. 这时 ViewGroup 会循环执行`parent = parent.invalidateChildInParent(location, dirty)` 直到 parent 为空。
+
+整个过程就处理完了，但 ViewGroup 中的 invalidateChildInParent 都是在处理一些参数，并没有和动画有直接联系，那动画到底是在哪里处理的？想到整个 View 树的 parent 不仅仅是 ViewGroup，它的顶层是 ViewRootImpl。ViewRootImpl 中的 invalidateChildInParent() 才是核心所在。它会将一个会执行 performTraversals() 的 Runnable 传到 Choreographer,当屏幕绘制下一帧的时候就会执行。真正跟动画相关的代码在 performTraversals() 中。该操作会执行测量，布局和绘制。由于动画相关代码在 draw() 里，所以我们直接进入 View 的 draw() 方法：
+```java
+    public void draw(Canvas canvas) {
+        // ...
+
+        // Step 1, draw the background, if needed
+        int saveCount;
+        if (!dirtyOpaque) {
+            drawBackground(canvas);
+        }
+
+        // 如果可以的话，跳过第2和5步
+        // ...
+        if (!verticalEdges && !horizontalEdges) {
+            // Step 3，开始调用 onDraw() 方法来绘制内容
+            if (!dirtyOpaque) onDraw(canvas);
+
+            // Step 4, 绘制子 View。这个方法的具体实现在 ViewGroup 中
+            dispatchDraw(canvas);
+            drawAutofilledHighlight(canvas);
+            // Overlay is part of the content and draws beneath Foreground
+            if (mOverlay != null && !mOverlay.isEmpty()) {
+                mOverlay.getOverlayView().dispatchDraw(canvas);
+            }
+
+            // Step 6, draw decorations (foreground, scrollbars)
+            onDrawForeground(canvas);
+
+            // Step 7, draw the default focus highlight
+            drawDefaultFocusHighlight(canvas);
+
+            if (debugDraw()) {
+                debugDrawFocus(canvas);
+            }
+
+            // we're done...
+            return;
+        }
+
+        // 后面就将 2~6 步骤完整走一遍
+    }
+```
+draw() 方法做了6步：
+1. 绘制背景
+2. 如果有必要的话，保存 canvas 图层来为 fading 做准备
+3. 调用 onDraw(canvas) 绘制 View 的内容
+4. dispatchDraw(canvas) 绘制子 View，这一步具体是由 ViewGroup 实现
+5. 如果有必要的话，绘制 fading 边界并保存图层
+6. 绘制装饰（如 scrollbars）
+
+第四步,它会调用 child.draw(Canvas canvas, View child, long drawingTime) 方法来触发子 View 的 draw(Canvas, View, long) 方法。 我们来看下这个方法：
+```java
+    /**
+     * This method is called by ViewGroup.drawChild() to have each child view draw itself.
+     */
+    boolean draw(Canvas canvas, ViewGroup parent, long drawingTime) {
+        // ...
+        boolean more = false;
+        // ...
+        // 获取在启动动画时传进来的 Animation 对象
+        final Animation a = getAnimation();
+        if (a != null) {
+            more = applyLegacyAnimation(parent, drawingTime, a, scalingRequired);
+            // ...
+        } 
+        // ...
+        return more;
+    }
+```
+可以看到这个方法中获取了之前传给 View 的 animation，然后传给 applyLegacyAnimation 方法：
+```java
+    /**
+     * Utility function, called by draw(canvas, parent, drawingTime) to handle the less common
+     * case of an active Animation being run on the view.
+     */
+    private boolean applyLegacyAnimation(ViewGroup parent, long drawingTime,
+            Animation a, boolean scalingRequired) {
+        Transformation invalidationTransform;
+        final int flags = parent.mGroupFlags;
+        final boolean initialized = a.isInitialized();
+        if (!initialized) {
+            // 初始化动画
+            a.initialize(mRight - mLeft, mBottom - mTop, parent.getWidth(), parent.getHeight());
+            a.initializeInvalidateRegion(0, 0, mRight - mLeft, mBottom - mTop);
+            if (mAttachInfo != null) a.setListenerHandler(mAttachInfo.mHandler);
+            onAnimationStart();
+        }
+
+        final Transformation t = parent.getChildTransformation();
+        // 获取动画的 Transformation, 返回值标志动画有没有做完，true 代表没有完成
+        boolean more = a.getTransformation(drawingTime, t, 1f);
+
+        // ...
+
+        // 动画未执行完
+        if (more) {
+            if (!a.willChangeBounds()) { // 动画是否会改变大小，alpha 动画会返回 false, 其余动画返回 true
+                if ((flags & (ViewGroup.FLAG_OPTIMIZE_INVALIDATE | ViewGroup.FLAG_ANIMATION_DONE)) ==
+                        ViewGroup.FLAG_OPTIMIZE_INVALIDATE) {
+                    parent.mGroupFlags |= ViewGroup.FLAG_INVALIDATE_REQUIRED;
+                } else if ((flags & ViewGroup.FLAG_INVALIDATE_REQUIRED) == 0) {
+                    // The child need to draw an animation, potentially offscreen, so
+                    // make sure we do not cancel invalidate requests
+                    parent.mPrivateFlags |= PFLAG_DRAW_ANIMATION;
+                    parent.invalidate(mLeft, mTop, mRight, mBottom);
+                }
+            } else {
+                if (parent.mInvalidateRegion == null) {
+                    parent.mInvalidateRegion = new RectF();
+                }
+                final RectF region = parent.mInvalidateRegion;
+                a.getInvalidateRegion(0, 0, mRight - mLeft, mBottom - mTop, region,
+                        invalidationTransform);
+
+                // The child need to draw an animation, potentially offscreen, so
+                // make sure we do not cancel invalidate requests
+                parent.mPrivateFlags |= PFLAG_DRAW_ANIMATION;
+
+                final int left = mLeft + (int) region.left;
+                final int top = mTop + (int) region.top;
+
+                // 内部调用 invalidateInternal 方法，然后将前面讲过的流程再走一遍，一直循环到动画结束 
+                parent.invalidate(left, top, left + (int) (region.width() + .5f),
+                        top + (int) (region.height() + .5f));
+            }
+        }
+        return more;
+    }
+```
+可以看出这里真正开始初始化，处理动画了。我们来看下 getTransformation 方法：
+```java
+    /**
+     * Gets the transformation to apply at a specified point in time. Implementations of this
+     * method should always replace the specified Transformation or document they are doing
+     * otherwise.
+     *
+     * @param currentTime Where we are in the animation. This is wall clock time.
+     * @param outTransformation A transformation object that is provided by the
+     *        caller and will be filled in by the animation.
+     * @return True if the animation is still running
+     */
+    public boolean getTransformation(long currentTime, Transformation outTransformation) {
+        if (mStartTime == -1) { // 记录动画开始执行的时间
+            mStartTime = currentTime;
+        }
+
+        final long startOffset = getStartOffset(); // 默认为0
+        final long duration = mDuration;
+        float normalizedTime;
+        if (duration != 0) {
+            // 根据当前时间计算动画的进度的百分比
+            normalizedTime = ((float) (currentTime - (mStartTime + startOffset))) /
+                    (float) duration;
+        } else {
+            // time is a step-change with a zero duration
+            normalizedTime = currentTime < mStartTime ? 0.0f : 1.0f;
+        }
+
+        final boolean expired = normalizedTime >= 1.0f || isCanceled();
+        // mMore 用来判断后面还有没有动画要执行。true 代表当前动画已经执行完了。
+        mMore = !expired;
+
+        if (!mFillEnabled) normalizedTime = Math.max(Math.min(normalizedTime, 1.0f), 0.0f);
+
+        if ((normalizedTime >= 0.0f || mFillBefore) && (normalizedTime <= 1.0f || mFillAfter)) {
+            if (!mStarted) { // 动画还没有 start()
+                fireAnimationStart();
+                mStarted = true;
+                if (NoImagePreloadHolder.USE_CLOSEGUARD) {
+                    guard.open("cancel or detach or getTransformation");
+                }
+            }
+
+            if (mFillEnabled) normalizedTime = Math.max(Math.min(normalizedTime, 1.0f), 0.0f);
+
+            if (mCycleFlip) { 
+                normalizedTime = 1.0f - normalizedTime;
+            }
+
+            // 将当前动画的进度传给 interpolator，获取实际的动画进度
+            final float interpolatedTime = mInterpolator.getInterpolation(normalizedTime);
+
+            // 执行动画
+            applyTransformation(interpolatedTime, outTransformation);
+        }
+
+        // 动画执行完了
+        if (expired) {
+            if (mRepeatCount == mRepeated || isCanceled()) { // 如果动画被取消或者动画重复也做完了
+                if (!mEnded) {
+                    mEnded = true;
+                    guard.close();
+                    fireAnimationEnd();
+                }
+            } else { // 动画需要重复播放
+                if (mRepeatCount > 0) {
+                    mRepeated++;
+                }
+
+                if (mRepeatMode == REVERSE) { // 动画反转
+                    mCycleFlip = !mCycleFlip;
+                }
+
+                mStartTime = -1;
+                mMore = true;
+
+                fireAnimationRepeat();
+            }
+        }
+
+        if (!mMore && mOneMoreTime) {
+            mOneMoreTime = false;
+            return true;
+        }
+
+        return mMore;
+    }
+```
+可以看出逻辑比较简单，就是计算当前动画的进度，然后将进度控制在0-1之间，将动画进度传给插值器获得动画的真实进度，然后执行。    
+它的返回值是用来判断动画是否已经执行完，如果没有执行完成的话，applyLegacyAnimation() 中会调用 parent.invalidate() 方法，它会调用 View.invalidateInternal() 方法，层层通知到 ViewRootImpl 然后再次发起一次遍历请求，等下一帧信号来的时候，就会执行 performTranversal() 遍历 View 树，调用 draw() 方法，然后调用到 applyLegacyAnimation() 来执行动画操作，这些就是前面讲过的。
+
+## conclusion
++ 调用 startAnimation() 方法将 Animation 传给 View，然后调用 View 的 invalidate() 方法一层层的往上通知到 ViewRootImpl，它会将布局绘制操作封装到一个 Runnable 然后传给 Choreographer，等受到处置信号时，就会执行这个 Runnable 来绘制下一帧。
++ 这个布局绘制操作会从 DecorView 开始往下遍历 View 树，并调用 draw() 方法，然后会调用 applyLegacyAnimation() 方法来处理动画。
++ applyLegacyAnimation() 方法会调用 Animation 类的 getTransformation() 方法，它是用来计算当前动画的进度并使用 applyTransformaion() 方法来执行动画。getTransformation() 的返回值标志动画是否完成，没有完成的话，会再次调用“invalidate”方法，重复上面步骤1，等下次受到垂直信号时，再次执行动画，直到动画结束。
+
+## references
++ [View 动画 Animation 运行原理解析](https://www.jianshu.com/p/48317612c164)   
