--- a/_posts/2018-08-12-View动画源码解析.md
+++ b/_posts/2018-08-12-View动画源码解析.md
@@ -70,7 +70,7 @@ protected void invalidateParentCaches() {
 
     void invalidateInternal(int l, int t, int r, int b, boolean invalidateCache,
             boolean fullInvalidate) {
-            //...
+            // ...
             // Propagate the damage rectangle to the parent view.
             final AttachInfo ai = mAttachInfo;
             final ViewParent p = mParent;
@@ -81,70 +81,18 @@ protected void invalidateParentCaches() {
                 p.invalidateChild(this, damage);
             }
 
-            //...
+            // ...
 ```
 可以看出它调用了 ViewGroup 的 invalidateChild()方法：
 ```java
     public final void invalidateChild(View child, final Rect dirty) {
-        final AttachInfo attachInfo = mAttachInfo;
-        if (attachInfo != null && attachInfo.mHardwareAccelerated) {
-            // HW accelerated fast path
-            onDescendantInvalidated(child, child);
-            return;
-        }
-
+        // ...
         ViewParent parent = this;
         if (attachInfo != null) {
-            // If the child is drawing an animation, we want to copy this flag onto
-            // ourselves and the parent to make sure the invalidate request goes
-            // through
+            // 如果子 View 要绘制动画，则要将该标志位复制给自己和自己的 parent 以确保刷新请求能通过
             final boolean drawAnimation = (child.mPrivateFlags & PFLAG_DRAW_ANIMATION) != 0;
 
-            // Check whether the child that requests the invalidate is fully opaque
-            // Views being animated or transformed are not considered opaque because we may
-            // be invalidating their old position and need the parent to paint behind them.
-            Matrix childMatrix = child.getMatrix();
-            final boolean isOpaque = child.isOpaque() && !drawAnimation &&
-                    child.getAnimation() == null && childMatrix.isIdentity();
-            // Mark the child as dirty, using the appropriate flag
-            // Make sure we do not set both flags at the same time
-            int opaqueFlag = isOpaque ? PFLAG_DIRTY_OPAQUE : PFLAG_DIRTY;
-
-            if (child.mLayerType != LAYER_TYPE_NONE) {
-                mPrivateFlags |= PFLAG_INVALIDATED;
-                mPrivateFlags &= ~PFLAG_DRAWING_CACHE_VALID;
-            }
-
-            final int[] location = attachInfo.mInvalidateChildLocation;
-            location[CHILD_LEFT_INDEX] = child.mLeft;
-            location[CHILD_TOP_INDEX] = child.mTop;
-            if (!childMatrix.isIdentity() ||
-                    (mGroupFlags & ViewGroup.FLAG_SUPPORT_STATIC_TRANSFORMATIONS) != 0) {
-                RectF boundingRect = attachInfo.mTmpTransformRect;
-                boundingRect.set(dirty);
-                Matrix transformMatrix;
-                if ((mGroupFlags & ViewGroup.FLAG_SUPPORT_STATIC_TRANSFORMATIONS) != 0) {
-                    Transformation t = attachInfo.mTmpTransformation;
-                    boolean transformed = getChildStaticTransformation(child, t);
-                    if (transformed) {
-                        transformMatrix = attachInfo.mTmpMatrix;
-                        transformMatrix.set(t.getMatrix());
-                        if (!childMatrix.isIdentity()) {
-                            transformMatrix.preConcat(childMatrix);
-                        }
-                    } else {
-                        transformMatrix = childMatrix;
-                    }
-                } else {
-                    transformMatrix = childMatrix;
-                }
-                transformMatrix.mapRect(boundingRect);
-                dirty.set((int) Math.floor(boundingRect.left),
-                        (int) Math.floor(boundingRect.top),
-                        (int) Math.ceil(boundingRect.right),
-                        (int) Math.ceil(boundingRect.bottom));
-            }
-
+            // ...
             do {
                 View view = null;
                 if (parent instanceof View) {
@@ -159,18 +107,9 @@ protected void invalidateParentCaches() {
                     }
                 }
 
-                // If the parent is dirty opaque or not dirty, mark it dirty with the opaque
-                // flag coming from the child that initiated the invalidate
-                if (view != null) {
-                    if ((view.mViewFlags & FADING_EDGE_MASK) != 0 &&
-                            view.getSolidColor() == 0) {
-                        opaqueFlag = PFLAG_DIRTY;
-                    }
-                    if ((view.mPrivateFlags & PFLAG_DIRTY_MASK) != PFLAG_DIRTY) {
-                        view.mPrivateFlags = (view.mPrivateFlags & ~PFLAG_DIRTY_MASK) | opaqueFlag;
-                    }
-                }
+                // ...
 
+                // 循环调用该方法，直到 parent 为 null。循环开始时，parent 为自身。
                 parent = parent.invalidateChildInParent(location, dirty);
                 if (view != null) {
                     // Account for transform on current parent
@@ -189,10 +128,161 @@ protected void invalidateParentCaches() {
         }
     }
 ```
+可以看出它也是在设置一些参数，里面循环调用 invalidateChildInParent。我们进去看看：
+```java
+    /**
+     * This implementation returns null if this ViewGroup does not have a parent,
+     * if this ViewGroup is already fully invalidated or if the dirty rectangle
+     * does not intersect with this ViewGroup's bounds.
+     */
+    public ViewParent invalidateChildInParent(final int[] location, final Rect dirty) {
+        if ((mPrivateFlags & (PFLAG_DRAWN | PFLAG_DRAWING_CACHE_VALID)) != 0) {
+            // either DRAWN, or DRAWING_CACHE_VALID
+            if ((mGroupFlags & (FLAG_OPTIMIZE_INVALIDATE | FLAG_ANIMATION_DONE))
+                    != FLAG_OPTIMIZE_INVALIDATE) {
+                dirty.offset(location[CHILD_LEFT_INDEX] - mScrollX,
+                        location[CHILD_TOP_INDEX] - mScrollY);
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == 0) {
+                    dirty.union(0, 0, mRight - mLeft, mBottom - mTop);
+                }
 
+                final int left = mLeft;
+                final int top = mTop;
 
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == FLAG_CLIP_CHILDREN) {
+                    if (!dirty.intersect(0, 0, mRight - left, mBottom - top)) {
+                        dirty.setEmpty();
+                    }
+                }
 
+                location[CHILD_LEFT_INDEX] = left;
+                location[CHILD_TOP_INDEX] = top;
+            } else {
+
+                if ((mGroupFlags & FLAG_CLIP_CHILDREN) == FLAG_CLIP_CHILDREN) {
+                    dirty.set(0, 0, mRight - mLeft, mBottom - mTop);
+                } else {
+                    // in case the dirty rect extends outside the bounds of this container
+                    dirty.union(0, 0, mRight - mLeft, mBottom - mTop);
+                }
+                location[CHILD_LEFT_INDEX] = mLeft;
+                location[CHILD_TOP_INDEX] = mTop;
+
+                mPrivateFlags &= ~PFLAG_DRAWN;
+            }
+            mPrivateFlags &= ~PFLAG_DRAWING_CACHE_VALID;
+            if (mLayerType != LAYER_TYPE_NONE) {
+                mPrivateFlags |= PFLAG_INVALIDATED;
+            }
+
+            return mParent;
+        }
+
+        return null;
+    }
+```
+从注解可以看出来，这个函数是返回当前 ViewGroup 的 parent 的。里面还没有看到具体的动画逻辑，由于 invalidateChildInParent 会一直循环执行，一直到 parent 为 null 为止，而 ViewGroup 的 parent 也是 ViewGroup，那么无论循环多少次都是调用一样的方法，都没有跟具体的动画逻辑有关系，那么动画到底是在哪里触发的呢？    
+我们知道，我们的布局是通过 setContentView() 时添加到 DecorView 中的，那么 DecorView 就是 View 树的根布局，而 DecorView 其实是会在 WindowManagerGlobal 的 addView 方法被添加到 ViewRootImpl 中，这个才是真正的根布局（虽然并没有继承 ViewGroup)。我们来看下 ViewRootImpl 的 invalidateChildInParent 方法：
+```java
+    public ViewParent invalidateChildInParent(int[] location, Rect dirty) {
+        // ...
+        if (dirty == null) {
+            invalidate();
+            return null;
+        } else if (dirty.isEmpty() && !mIsAnimating) {
+            return null;
+        }
+        // ...
+        invalidateRectOnScreen(dirty);
+
+        return null;
+    }
+```
+从 ViewGroup 的 invalidateChildInParent 方法里看出来 dirty 是不为空的，那么会直接走到 invalidateRectOnScreen 方法中：
+```java
+    private void invalidateRectOnScreen(Rect dirty) {
+        // ...
+        if (!mWillDrawSoon && (intersected || mIsAnimating)) {
+            scheduleTraversals();
+        }
+    }
+
+    void scheduleTraversals() {
+        if (!mTraversalScheduled) {
+            // ...
+            mChoreographer.postCallback(
+                    Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);
+            // ...
+        }
+    }
+
+    final TraversalRunnable mTraversalRunnable = new TraversalRunnable();
+    final class TraversalRunnable implements Runnable {
+        @Override
+        public void run() {
+            doTraversal();
+        }
+    }
+
+    void doTraversal() {
+        if (mTraversalScheduled) {
+            // ...
+            performTraversals();
+            // ...
+        }
+    }
+``` 
+可以看出它的目的是将 performTraversals() 方法封装到 Runnalbe 里，然后传给 Choreographer。我们来看下传给它后做了什么：
+```java
+    /**
+     * Posts a callback to run on the next frame.
+     * <p>
+     * The callback runs once then is automatically removed.
+     * </p>
+     *
+     * @param callbackType The callback type.
+     * @param action The callback action to run during the next frame.
+     * @param token The callback token, or null if none.
+     *
+     * @see #removeCallbacks
+     * @hide
+     */
+    public void postCallback(int callbackType, Runnable action, Object token) {
+        postCallbackDelayed(callbackType, action, token, 0);
+    }
+```
+从注释可以看出，这个将 Runnable 传进来是为了在屏幕绘制下一帧的时候去执行。也就是我们调用 start 启动动画后并不是直接执行的，而是在屏幕绘制下一帧的时候才会执行。这个方法最终会调用到：
+```java
+    private void postCallbackDelayedInternal(int callbackType,
+            Object action, Object token, long delayMillis) {
+        synchronized (mLock) {
+            final long now = SystemClock.uptimeMillis();
+            final long dueTime = now + delayMillis;
+            
+            // 会将 Runnable 封装到 CallbackRecord 中，然后存入队列中
+            mCallbackQueues[callbackType].addCallbackLocked(dueTime, action, token);
+
+            if (dueTime <= now) {
+                scheduleFrameLocked(now);
+            } else {
+                Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);
+                msg.arg1 = callbackType;
+                msg.setAsynchronous(true);
+                mHandler.sendMessageAtTime(msg, dueTime);
+            }
+        }
+    }
+```
+Runnable 被存入到 Choreographer 的待执行队列中，当屏幕绘制信号（安卓手机屏幕刷新频率为60fps，也就是16.7ms屏幕会刷新一次）到来时会被执行，这样 ViewRootImpl 的 performTranversals() 就会执行。这个方法是从 DecorView 开始遍历 View 树来执行 onMeasure 等操作的。由于每一次页面刷新都会执行 ViewRootImpl 的 performTraversal() 操作来遍历 View 树，找到发生改变的 View 来执行 onMeasure 等操作，所以我们写布局时要尽量减少层级。
+
+**我们来总结下调用 startAnimation 后的流程：**
+![]({{site.url}}/img/android/anim/startAnimation1.png)   
+1. 调用 View.StartAnimation(Animation) 方法后，会调用 setAnimation() 将这个 animation 会作为 View 的全局变量保存起来
+2. 然后调用 View 的 invalidate() 方法，它会调用 parent.invalidateChild() 方法来调到 ViewGroup 中的该方法。
+3. 这时 ViewGroup 会循环执行`parent = parent.invalidateChildInParent(location, dirty)` 直到 parent 为空。
+
+整个过程就处理完了，但 ViewGroup 中的 invalidateChildInParent 都是在处理一些参数，并没有和动画有直接联系，那动画到底是在哪里处理的？想到整个 View 树的 parent 不仅仅是 ViewGroup，它的顶层是 ViewRootImpl。ViewRootImpl 中的 invalidateChildInParent() 才是核心所在。它会将一个会执行 performTraversals() 的 Runnable 传到 Choreographer,当屏幕绘制下一帧的时候就会执行。真正跟动画相关的代码在 performTraversals() 中。
 
 ## 参考文献
-+ [android 动画系列 (2) - interpolator 插值器](https://www.jianshu.com/p/88740cba25e6)   
++ [android 动画系列 (2) - interpolator 插值器](https://www.jianshu.com/p/48317612c164)   
 + [模拟自然动画的精髓——TimeInterpolator与TypeEvaluator](https://www.jianshu.com/p/b239d14060a8) 
