--- a/_posts/2018-08-12-View动画源码解析.md
+++ b/_posts/2018-08-12-View动画源码解析.md
@@ -71,6 +71,10 @@ protected void invalidateParentCaches() {
     void invalidateInternal(int l, int t, int r, int b, boolean invalidateCache,
             boolean fullInvalidate) {
             // ...
+            if (skipInvalidate()) { // 当 View 不为 VISIBLE 且没有动画时，直接不绘制
+                return;
+            }
+
             // Propagate the damage rectangle to the parent view.
             final AttachInfo ai = mAttachInfo;
             final ViewParent p = mParent;
@@ -89,20 +93,21 @@ protected void invalidateParentCaches() {
         // ...
         ViewParent parent = this;
         if (attachInfo != null) {
-            // 如果子 View 要绘制动画，则要将该标志位复制给自己和自己的 parent 以确保刷新请求能通过
+            // 如果子 View 有动画，则要将该标志位复制给自己和自己的 parent 以确保刷新请求能通过
             final boolean drawAnimation = (child.mPrivateFlags & PFLAG_DRAW_ANIMATION) != 0;
 
             // ...
             do {
                 View view = null;
-                if (parent instanceof View) {
+                if (parent instanceof View) { // 从这里看出在 View 树中，某些 parent 可能不为 View
                     view = (View) parent;
                 }
 
                 if (drawAnimation) {
                     if (view != null) {
                         view.mPrivateFlags |= PFLAG_DRAW_ANIMATION;
-                    } else if (parent instanceof ViewRootImpl) {
+                    } else if (parent instanceof ViewRootImpl) { 
+                        // 看出 View 的某个 parent 为 ViewRootImpl（不是 ViewGroup)
                         ((ViewRootImpl) parent).mIsAnimating = true;
                     }
                 }
@@ -110,14 +115,21 @@ protected void invalidateParentCaches() {
                 // ...
 
                 // 循环调用该方法，直到 parent 为 null。循环开始时，parent 为自身。
+                // location 为 child 左上角与自己的左上角距离
+                // dirty 为所要绘制的区域[0, 0, width, height]
                 parent = parent.invalidateChildInParent(location, dirty);
+                // invalidateChildInParent 执行完后会得到新的 dirty 和 location
                 if (view != null) {
                     // Account for transform on current parent
-                    Matrix m = view.getMatrix();
+                    Matrix m = view.getMatrix(); // 获得当前的 matrix
                     if (!m.isIdentity()) {
                         RectF boundingRect = attachInfo.mTmpTransformRect;
-                        boundingRect.set(dirty);
+                        // boundingRect 即为当前所绘制的区域大小，即[0, 0, width, height]
+                        boundingRect.set(dirty); 
+                        // 如果该 view 有做 matrix 变换，如 matrix.setScale(2f, 1f)
+                        // 即将宽度变为2倍，那么要将 boundingRect 变为[0, 0, 2 * widht, height]
                         m.mapRect(boundingRect);
+                        // 然后将真实所应绘制的区域设置给 dirty
                         dirty.set((int) Math.floor(boundingRect.left),
                                 (int) Math.floor(boundingRect.top),
                                 (int) Math.ceil(boundingRect.right),
@@ -128,7 +140,7 @@ protected void invalidateParentCaches() {
         }
     }
 ```
-可以看出它也是在设置一些参数，里面循环调用 invalidateChildInParent。我们进去看看：
+可以看出它会获得当前 view 的绘制区域dirty：[0, 0, width, height]，以及该 view 相对父 view 的距离 location：[left, top]，里面循环调用 invalidateChildInParent(location, dirty)。我们进去看看：
 ```java
     /**
      * This implementation returns null if this ViewGroup does not have a parent,
@@ -140,8 +152,10 @@ protected void invalidateParentCaches() {
             // either DRAWN, or DRAWING_CACHE_VALID
             if ((mGroupFlags & (FLAG_OPTIMIZE_INVALIDATE | FLAG_ANIMATION_DONE))
                     != FLAG_OPTIMIZE_INVALIDATE) {
+                // 用 dirty 和 location计算出绘制区域相对于 parent 的坐标 
                 dirty.offset(location[CHILD_LEFT_INDEX] - mScrollX,
                         location[CHILD_TOP_INDEX] - mScrollY);
+                // 不裁减（即子 view 和 parent 有重叠的部分也需要进行绘制）则取并集得到新的绘制区域
                 if ((mGroupFlags & FLAG_CLIP_CHILDREN) == 0) {
                     dirty.union(0, 0, mRight - mLeft, mBottom - mTop);
                 }
@@ -149,6 +163,7 @@ protected void invalidateParentCaches() {
                 final int left = mLeft;
                 final int top = mTop;
 
+                // 裁减的话，则取交集（仅仅绘制子 View 内有效的区间）
                 if ((mGroupFlags & FLAG_CLIP_CHILDREN) == FLAG_CLIP_CHILDREN) {
                     if (!dirty.intersect(0, 0, mRight - left, mBottom - top)) {
                         dirty.setEmpty();
@@ -181,7 +196,7 @@ protected void invalidateParentCaches() {
         return null;
     }
 ```
-从注解可以看出来，这个函数是返回当前 ViewGroup 的 parent 的。里面还没有看到具体的动画逻辑，由于 invalidateChildInParent 会一直循环执行，一直到 parent 为 null 为止，而 ViewGroup 的 parent 也是 ViewGroup，那么无论循环多少次都是调用一样的方法，都没有跟具体的动画逻辑有关系，那么动画到底是在哪里触发的呢？    
+可以看出它所做的事情就是通过是否要进行裁减来决定绘制区域，这个函数是返回当前 ViewGroup 的 parent 的。里面还没有看到具体的动画逻辑，由于 invalidateChildInParent 会一直循环执行，一直到 parent 为 null 为止，而 ViewGroup 的 parent 也是 ViewGroup，那么无论循环多少次都是调用一样的方法，都没有跟具体的动画逻辑有关系，那么动画到底是在哪里触发的呢？    
 我们知道，我们的布局是通过 setContentView() 时添加到 DecorView 中的，那么 DecorView 就是 View 树的根布局，而 DecorView 其实是会在 WindowManagerGlobal 的 addView 方法被添加到 ViewRootImpl 中，这个才是真正的根布局（虽然并没有继承 ViewGroup)。我们来看下 ViewRootImpl 的 invalidateChildInParent 方法：
 ```java
     public ViewParent invalidateChildInParent(int[] location, Rect dirty) {
@@ -501,14 +516,6 @@ draw() 方法做了6步：
 ```
 可以看出逻辑比较简单，就是计算当前动画的进度，然后将进度控制在0-1之间，将动画进度传给插值器获得动画的真实进度，然后执行。    
 它的返回值是用来判断动画是否已经执行完，如果没有执行完成的话，applyLegacyAnimation() 中会调用 parent.invalidate() 方法，它会调用 View.invalidateInternal() 方法，层层通知到 ViewRootImpl 然后再次发起一次遍历请求，等下一帧信号来的时候，就会执行 performTranversal() 遍历 View 树，调用 draw() 方法，然后调用到 applyLegacyAnimation() 来执行动画操作，这些就是前面讲过的。
-
-**我们来总结下调用 startAnimation 后的流程：**
-![]({{site.url}}/img/android/anim/startAnimation1.png)   
-1. 调用 View.StartAnimation(Animation) 方法后，会调用 setAnimation() 将这个 animation 会作为 View 的全局变量保存起来
-2. 然后调用 View 的 invalidate() 方法，它会调用 parent.invalidateChild() 方法来调到 ViewGroup 中的该方法。
-3. 这时 ViewGroup 会循环执行`parent = parent.invalidateChildInParent(location, dirty)` 直到 parent 为空。
-
-整个过程就处理完了，但 ViewGroup 中的 invalidateChildInParent 都是在处理一些参数，并没有和动画有直接联系，那动画到底是在哪里处理的？想到整个 View 树的 parent 不仅仅是 ViewGroup，它的顶层是 ViewRootImpl。ViewRootImpl 中的 invalidateChildInParent() 才是核心所在。它会将一个会执行 performTraversals() 的 Runnable 传到 Choreographer,当屏幕绘制下一帧的时候就会执行。真正跟动画相关的代码在 performTraversals() 中。
 
 ## conclusion
 + 调用 startAnimation() 方法将 Animation 传给 View，然后调用 View 的 invalidate() 方法一层层的往上通知到 ViewRootImpl，它会将布局绘制操作封装到一个 Runnable 然后传给 Choreographer，等受到处置信号时，就会执行这个 Runnable 来绘制下一帧。
